# django-rest-boilerplate

./: README.md  manage.py  pyproject.toml
common/: utility.py
config/: settings.py  urls.py
templates/: emailTemplate.html  emailTemplate.txt
userAuth/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
userAuth/migrations/: 0001_initial.py  0002_remove_resettoken_expire_at.py  0003_alter_resettoken_created_at.py  0004_resettoken_isvalid.py
